# AgentMatrix

./: .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  DEVELOPMENT_DOC.md  LICENSE  README.md  deepseek密钥.txt  pytest.ini  ruff.toml  start.bat  start.ps1  stop.bat  stop.ps1  temp.py  temp2.py  test.bat  test.ps1
backend/: .env.example  check_deepseek_usage.py  debug_config.py  detailed_debug.py  houduan.md  pyproject.toml  quick_test.py  run_backend.py  run_direct.py  simple_start.py  start_server.py  start_service.py  test_agent_debug.py  test_api.py  test_api_full.py  test_cloud_call.py  test_complex.py  test_complexity.py  test_complexity_section.py  test_complexity_section2.py  test_config.py  test_deepseek.py  test_deepseek_chat.py  test_deepseek_direct.py  test_deepseek_simple.py  test_direct_deepseek.py  test_final.py  test_full_api.py  test_full_workflow.py  test_immediate.py  test_import.py  test_judge_comprehensive.py  test_judge_llm.py  test_judge_mechanism.py  test_llm_debug.py  test_llm_integration.py  test_love_letter.py  test_model_names.py  test_model_switch.py  test_multiple_tasks.py  (+18 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/config/: app_config.json  manager.py
backend/core/: __init__.py
backend/frontend/: index.html
backend/knowledge/: knowledge_base.json  service.py
backend/models/: __init__.py  agent.py  db_models.py  workflow.py
backend/prompts/: __init__.py  template_manager.py
backend/roletxt/: all role.txt  knowledge.txt  review.txt
backend/services/: __init__.py  agent_service.py
backend/shared/: platform.py
backend/tests/: test_api_performance.py  test_report.json
backend/utils/: logger.py  (+1 more)
(+83 files in other folders)
